Included additional redirects, alerts, and buttons.

--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
     <div>Why are you trying to use this website?</div>
     <textarea name="Text1" cols="40" rows="5">
     </textarea>
+    <button id="btn-continue">Continue</button>
+    <button id="btn-close">Close</button>
+    <script src="index.js"></script>
   </body>
 </html>
