Be able to set a duration from the UI.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
   <body>
     <div>Why are you trying to use this website?</div>
-    <textarea name="Text1" cols="40" rows="5">
+    <textarea cols="40" rows="5">
     </textarea>
+
+    <input type="number" id="input-checkout-duration" min="0" max="25"></input>
+
     <button id="btn-continue">Continue</button>
     <button id="btn-close">Close</button>
     <script src="index.js"></script>
