--- a/blocker_landing/index.html
+++ b/blocker_landing/index.html
@@ -1,13 +1,34 @@
 <html>
+  <head>
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="index.css">
+  </head>
   <body>
-    <div>Why are you trying to use this website?</div>
-    <textarea cols="40" rows="5">
-    </textarea>
+    <div id="content">
+      <div id="txt-question" class="txt-block">
+        What are you up to?
+      </div>
+      <div id="btn-close" class="btn">
+        I'm just wasting time! Get me out of here.
+      </div>
+      <br>
+      <div id="txt-or" class="txt-block">
+        Or...
+      </div>
+      <textarea
+        id="txtarea-reason"
+        cols="40"
+        rows="5"
+        placeholder="Here's my reason..."></textarea>
+      <br>
+      <div class="txt-block">
+        How many minutes would you need?
+      </div>
+      <input type="number" id="input-checkout-duration" placeholder="5" min="0" max="25"></input>
+      <br>
+      <div id="btn-continue" class="btn">Proceed with caution</div>
+    </div>
 
-    <input type="number" id="input-checkout-duration" min="0" max="25"></input>
-
-    <button id="btn-continue">Continue</button>
-    <button id="btn-close">Close</button>
     <script src="index.js"></script>
   </body>
 </html>
