Add a textarea to options.

--- a/blocker_landing/index.html
+++ b/blocker_landing/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <title>Purpose</title>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="index.css">
   </head>
@@ -19,7 +20,8 @@
         id="txtarea-reason"
         cols="40"
         rows="5"
-        placeholder="Here's my reason..."></textarea>
+        placeholder="Here's my reason..."
+        required></textarea>
       <br>
       <div class="txt-block">
         How many minutes would you need?
