Allow for custom blocking saves.

--- a/options/index.html
+++ b/options/index.html
@@ -1,5 +1,12 @@
 <html>
+  <head>
+    <title>Options - Purpose</title>
+  </head>
   <body>
-    <textarea rows="30"></textarea>
+    <form>
+      <textarea id="txtarea-catchers" rows="30"></textarea>
+      <button id="btn-save">Save</button>
+      <script src="index.js"></script>
+    </form>
   </body>
 </html>
