--- a/blocker_landing/index.html
+++ b/blocker_landing/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Purpose</title>
+    <title>Block - Purpose</title>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="index.css">
   </head>
