--- a/blocker_landing/index.html
+++ b/blocker_landing/index.html
@@ -31,6 +31,7 @@
       <div id="btn-continue" class="btn">Proceed with caution</div>
     </div>
 
+    <script src="../models/events.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
