--- a/options/index.html
+++ b/options/index.html
@@ -6,6 +6,7 @@
     <form>
       <textarea id="txtarea-catchers" rows="30"></textarea>
       <button id="btn-save">Save</button>
+      <script src="../models/events.js"></script>
       <script src="index.js"></script>
     </form>
   </body>
