--- a/options/index.html
+++ b/options/index.html
@@ -1,13 +1,20 @@
 <html>
   <head>
     <title>Options - Purpose</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="index.css">
   </head>
   <body>
-    <form>
-      <textarea id="txtarea-catchers" rows="30"></textarea>
-      <button id="btn-save">Save</button>
-      <script src="../models/events.js"></script>
-      <script src="index.js"></script>
-    </form>
+    <div id="content">
+      <form>
+        <h1>Options</h1>
+        <p>Enter your block regex expressions here. Keep one regex per line.</p>
+        <textarea id="txtarea-catchers" rows="15"></textarea>
+        <br>
+        <button id="btn-save">Save</button>
+      </form>
+    </div>
+    <script src="../models/events.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
