--- a/options/index.html
+++ b/options/index.html
@@ -2,16 +2,17 @@
   <head>
     <title>Options - Purpose</title>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="../base/index.css">
     <link rel="stylesheet" type="text/css" href="index.css">
   </head>
-  <body>
-    <div id="content">
+  <body class="body-center">
+    <div class="body-content">
       <form>
         <h1>Options</h1>
         <p>Enter your block regex expressions here. Keep one regex per line.</p>
-        <textarea id="txtarea-catchers" rows="15"></textarea>
-        <br>
-        <button id="btn-save">Save</button>
+        <textarea id="txtarea-catchers" class="fill-width" rows="15"></textarea>
+        <br><br>
+        <button id="btn-save" class="btn-primary">Save</button>
       </form>
     </div>
     <script src="../models/events.js"></script>
