Include raven script.

--- a/popup/index.html
+++ b/popup/index.html
@@ -16,6 +16,8 @@
       class="btn-default fill-width">
       All options
     </button>
+
+    <script src="../libs/raven.min.js"></script>
     <script src="../models/events.js"></script>
     <script src="index.js"></script>
   </body>
