--- a/blocker_landing/index.html
+++ b/blocker_landing/index.html
@@ -42,6 +42,7 @@
       </form>
     </div>
 
+    <script src="../libs/raven.min.js"></script>
     <script src="../models/events.js"></script>
     <script src="index.js"></script>
   </body>
