--- a/options/index.html
+++ b/options/index.html
@@ -15,6 +15,8 @@
         <button id="btn-save" class="btn-primary">Save</button>
       </form>
     </div>
+
+    <script src="../libs/raven.min.js"></script>
     <script src="../models/events.js"></script>
     <script src="index.js"></script>
   </body>
