Added a config raven script.

--- a/blocker_landing/index.html
+++ b/blocker_landing/index.html
@@ -43,6 +43,7 @@
     </div>
 
     <script src="../libs/raven.min.js"></script>
+    <script src="../base/config_raven.js"></script>
     <script src="../models/events.js"></script>
     <script src="index.js"></script>
   </body>
