--- a/options/index.html
+++ b/options/index.html
@@ -17,6 +17,7 @@
     </div>
 
     <script src="../libs/raven.min.js"></script>
+    <script src="../base/config_raven.js"></script>
     <script src="../models/events.js"></script>
     <script src="index.js"></script>
   </body>
