--- a/popup/index.html
+++ b/popup/index.html
@@ -18,6 +18,7 @@
     </button>
 
     <script src="../libs/raven.min.js"></script>
+    <script src="../base/config_raven.js"></script>
     <script src="../models/events.js"></script>
     <script src="index.js"></script>
   </body>
