--- a/options/index.html
+++ b/options/index.html
@@ -18,6 +18,7 @@
 
     <script src="../libs/raven.min.js"></script>
     <script src="../base/config_raven.js"></script>
+    <script src="../base/init_ga.js"></script>
     <script src="../models/events.js"></script>
     <script src="index.js"></script>
   </body>
