Included error reporting and basic analytics. (#11)
* Include raven script.

* TEMP.

* Included instrumentation.

* Added a config raven script.

* Now handling chrome response errors.

* Fixed missing null check.

* Included google analytics tracking.

* Removed unused throw code.

--- a/options/index.html
+++ b/options/index.html
@@ -15,6 +15,10 @@
         <button id="btn-save" class="btn-primary">Save</button>
       </form>
     </div>
+
+    <script src="../libs/raven.min.js"></script>
+    <script src="../base/config_raven.js"></script>
+    <script src="../base/init_ga.js"></script>
     <script src="../models/events.js"></script>
     <script src="index.js"></script>
   </body>
