Added a Github link to submit issues.

--- a/options/index.html
+++ b/options/index.html
@@ -13,6 +13,14 @@
         <textarea id="txtarea-catchers" class="fill-width" rows="15"></textarea>
         <br><br>
         <button id="btn-save" class="btn-primary">Save</button>
+        <br><br>
+        <h2>Feedback</h2>
+        <p>
+          Have questions/comments/feedback? Please feel free to share!
+          <ul>
+            <li><a href="https://github.com/hdavidzhu/purpose/issues">Github</a></li>
+          </ul>
+        </p>
       </form>
     </div>
 
