--- a/options/index.html
+++ b/options/index.html
@@ -9,8 +9,21 @@
     <div class="body-content">
       <form>
         <h1>Options</h1>
-        <p>Enter your block regex expressions here. Keep one regex per line.</p>
-        <textarea id="txtarea-catchers" class="fill-width" rows="15"></textarea>
+        <p>
+          Enter the regex expressions that can block your websites here. Keep one regex per line. Learn how to use simple regex at:
+          <ul>
+            <li><a href="https://regexone.com/">RegexOne</a></li>
+            <li><a href="https://ryanstutorials.net/regular-expressions-tutorial/regular-expressions-basics.php">Ryans Tutorial</a></li>
+            <li><a href="http://www.regular-expressions.info/quickstart.html">regular-expressions.info</a></li>
+          </ul>
+          You can also test your regex here:
+          <ul><li><a href="https://regex101.com/">Regular expressions 101</a></li></ul>
+        </p>
+        <textarea
+          id="txtarea-catchers"
+          class="fill-width"
+          rows="15"
+          placeholder="facebook.com"></textarea>
         <br><br>
         <button id="btn-save" class="btn-primary">Save</button>
         <br><br>
