Included some helpful links for regex use.

--- a/options/index.html
+++ b/options/index.html
@@ -23,7 +23,9 @@
           id="txtarea-catchers"
           class="fill-width"
           rows="15"
-          placeholder="facebook.com"></textarea>
+          placeholder="facebook\.com
+reddit
+youtube\.com\/feed\/trending$"></textarea>
         <br><br>
         <button id="btn-save" class="btn-primary">Save</button>
         <br><br>
