Included small improvements. (#12)
* Included a basic readme.

* Added a Github link to submit issues.

* Included some helpful links for regex use.gs

* Included some helpful links for regex use.

--- a/options/index.html
+++ b/options/index.html
@@ -9,10 +9,33 @@
     <div class="body-content">
       <form>
         <h1>Options</h1>
-        <p>Enter your block regex expressions here. Keep one regex per line.</p>
-        <textarea id="txtarea-catchers" class="fill-width" rows="15"></textarea>
+        <p>
+          Enter the regex expressions that can block your websites here. Keep one regex per line. Learn how to use simple regex at:
+          <ul>
+            <li><a href="https://regexone.com/">RegexOne</a></li>
+            <li><a href="https://ryanstutorials.net/regular-expressions-tutorial/regular-expressions-basics.php">Ryans Tutorial</a></li>
+            <li><a href="http://www.regular-expressions.info/quickstart.html">regular-expressions.info</a></li>
+          </ul>
+          You can also test your regex here:
+          <ul><li><a href="https://regex101.com/">Regular expressions 101</a></li></ul>
+        </p>
+        <textarea
+          id="txtarea-catchers"
+          class="fill-width"
+          rows="15"
+          placeholder="facebook\.com
+reddit
+youtube\.com\/feed\/trending$"></textarea>
         <br><br>
         <button id="btn-save" class="btn-primary">Save</button>
+        <br><br>
+        <h2>Feedback</h2>
+        <p>
+          Have questions/comments/feedback? Please feel free to share!
+          <ul>
+            <li><a href="https://github.com/hdavidzhu/purpose/issues">Github</a></li>
+          </ul>
+        </p>
       </form>
     </div>
 
